Add Pomodoro timer and task management features with CSS styling and JavaScript functionality
- Implemented Pomodoro timer with work and break sessions
- Added task management system with create, edit, delete, and completion features
- Styled components using CSS for a visually appealing user interface
- Integrated localStorage for persistent note and task storage
- Included responsive design for mobile compatibility

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <ul>
                     <li><a href="#anasayfa" class="menu-item"><i class="fas fa-home"></i> Ana Sayfa</a></li>
                     <li><a href="/html/hakkimizda.html" class="menu-item external-link"><i class="fas fa-info-circle"></i> Hakkımızda</a></li>
-                    <li><a href="#pomodoro" class="menu-item"><i class="fas fa-clock"></i> Pomodoro</a></li>
-                    <li><a href="#gunluk-notlar" class="menu-item"><i class="fas fa-book"></i> Notlar</a></li>
+                    <li><a href="/html/pomodoro.html" class="menu-item external-link"><i class="fas fa-clock"></i> Pomodoro</a></li>
+                    <li><a href="/html/notlar.html" class="menu-item external-link"><i class="fas fa-book"></i> Notlar</a></li>
                     <li><a href="#ruh-hali-takibi" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
                     <li><a href="#meditasyon" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
                     <li><a href="#mini-egzersizler" class="menu-item"><i class="fas fa-dumbbell"></i> Egzersiz</a></li>
@@ -52,7 +52,7 @@
                         <p class="hero-description">MindMate, düşüncelerinizi, duygularınızı ve üretkenliğinizi tek bir sessiz ve dikkat dağıtıcı unsurlardan uzak alanda yönetmenize yardımcı olmak için tasarlanmış web tabanlı bir arkadaştır.</p>
                         <div class="cta-buttons">
                             <a href="#pomodoro" class="cta-button pomodoro-btn">Pomodoro</a>
-                            <a href="#mini-egzersizler" class="cta-button exercises-btn">Egzersizler</a>
+                            <a href="/html/notlar.html" class="cta-button exercises-btn">Notlar</a>
                         </div>
                     </div>
                     <div class="hero-image scroll-element slide-in-right">
@@ -89,7 +89,7 @@
                             <h3 class="feature-title">Dakikalarınızı Kontrol Edin, Zihninize Sahip Olun</h3>
                             <p class="feature-description">Zamanınızın ve dikkatinizin kontrolünü geri almak için odaklanmış aralıkların gücünden yararlanın. MindMate'in Pomodoro zamanlayıcısıyla ertelemeyi bırakıp ilerlemeye başlayacaksınız — her seferinde bir odaklanmış seans. Akışınızı takip edin, tükenmişliği yenin ve 25 dakikada ne kadar çok şey başarabileceğinizi keşfedin.</p>
                             <div class="cta-buttons">
-                                <a href="#pomodoro" class="cta-button pomodoro-btn">Pomodoro</a>
+                                <a href="/html/pomodoro.html" class="cta-button pomodoro-btn">Pomodoro</a>
                                 <a href="#mini-egzersizler" class="cta-button exercises-btn">Egzersizler</a>
                             </div>
                         </div>
@@ -124,7 +124,10 @@
 
             <section id="gunluk-notlar">
                 <h2>Günlük Notlar</h2>
-                <!-- Günlük notlar içeriği buraya gelecek -->
+                <p>Düşüncelerinizi ve fikirlerinizi kolayca kaydedebileceğiniz dijital not defteriniz.</p>
+                <div class="cta-buttons">
+                    <a href="/html/notlar.html" class="cta-button exercises-btn">Notlarınıza Gidin</a>
+                </div>
             </section>
 
             <section id="ruh-hali-takibi">
