--- a/html/hakkimizda.html
+++ b/html/hakkimizda.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li><a href="../index.html#anasayfa" class="menu-item"><i class="fas fa-home"></i> Ana Sayfa</a></li>
                     <li><a href="hakkimizda.html" class="menu-item active"><i class="fas fa-info-circle"></i> Hakkımızda</a></li>
-                    <li><a href="../index.html#pomodoro" class="menu-item"><i class="fas fa-clock"></i> Pomodoro</a></li>
-                    <li><a href="../index.html#gunluk-notlar" class="menu-item"><i class="fas fa-book"></i> Notlar</a></li>
+                    <li><a href="pomodoro.html" class="menu-item"><i class="fas fa-clock"></i> Pomodoro</a></li>
+                    <li><a href="notlar.html" class="menu-item"><i class="fas fa-book"></i> Notlar</a></li>
                     <li><a href="../index.html#ruh-hali-takibi" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
                     <li><a href="../index.html#meditasyon" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
                     <li><a href="../index.html#mini-egzersizler" class="menu-item"><i class="fas fa-dumbbell"></i> Egzersiz</a></li>
