Add styles and functionality for mood tracking and meditation features
- Implemented CSS styles for the mood tracking page, including layout, card designs, and responsive adjustments.
- Developed JavaScript functionality for the meditation timer, including session management, sound controls, and local storage for user preferences.
- Created mood tracking logic with local storage integration, including mood selection, history display, and statistics calculation.
- Added confirmation modal for clearing mood history and toast notifications for user feedback.

--- a/html/notlar.html
+++ b/html/notlar.html
@@ -20,8 +20,8 @@
                     <li><a href="hakkimizda.html" class="menu-item"><i class="fas fa-info-circle"></i> Hakkımızda</a></li>
                     <li><a href="pomodoro.html" class="menu-item"><i class="fas fa-clock"></i> Pomodoro</a></li>
                     <li><a href="notlar.html" class="menu-item active"><i class="fas fa-book"></i> Notlar</a></li>
-                    <li><a href="../index.html#ruh-hali-takibi" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
-                    <li><a href="../index.html#meditasyon" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
+                    <li><a href="ruh-hali.html" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
+                    <li><a href="meditasyon.html" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
                     <li><a href="../index.html#mini-egzersizler" class="menu-item"><i class="fas fa-dumbbell"></i> Egzersiz</a></li>
                 </ul>
             </nav>
