--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li><a href="/html/hakkimizda.html" class="menu-item external-link"><i class="fas fa-info-circle"></i> Hakkımızda</a></li>
                     <li><a href="/html/pomodoro.html" class="menu-item external-link"><i class="fas fa-clock"></i> Pomodoro</a></li>
                     <li><a href="/html/notlar.html" class="menu-item external-link"><i class="fas fa-book"></i> Notlar</a></li>
-                    <li><a href="#ruh-hali-takibi" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
-                    <li><a href="#meditasyon" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
+                    <li><a href="/html/ruh-hali.html" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
+                    <li><a href="/html/meditasyon.html" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
                     <li><a href="#mini-egzersizler" class="menu-item"><i class="fas fa-dumbbell"></i> Egzersiz</a></li>
                 </ul>
             </nav>
@@ -115,35 +115,6 @@
                         </div>
                     </div>
                 </div>
-            </section>
-
-            <section id="pomodoro">
-                <h2>Pomodoro Zamanlayıcısı</h2>
-                <!-- Pomodoro içeriği buraya gelecek -->
-            </section>
-
-            <section id="gunluk-notlar">
-                <h2>Günlük Notlar</h2>
-                <p>Düşüncelerinizi ve fikirlerinizi kolayca kaydedebileceğiniz dijital not defteriniz.</p>
-                <div class="cta-buttons">
-                    <a href="/html/notlar.html" class="cta-button exercises-btn">Notlarınıza Gidin</a>
-                </div>
-            </section>
-
-            <section id="ruh-hali-takibi">
-                <h2>Ruh Hali Takibi</h2>
-                <!-- Ruh hali takibi içeriği buraya gelecek -->
-            </section>
-            
-            <section id="meditasyon">
-                <h2>Meditasyon</h2>
-                <p>Günlük meditasyon pratiğinizle zihin berraklığı ve iç huzur kazanın.</p>
-                <!-- Meditasyon içeriği buraya gelecek -->
-            </section>
-
-            <section id="mini-egzersizler">
-                <h2>Mini Egzersizler</h2>
-                <!-- Mini egzersizler içeriği buraya gelecek -->
             </section>
         </main>
     </div>
