--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -21,8 +21,8 @@
                     <li><a href="hakkimizda.html" class="menu-item"><i class="fas fa-info-circle"></i> Hakkımızda</a></li>
                     <li><a href="pomodoro.html" class="menu-item active"><i class="fas fa-clock"></i> Pomodoro</a></li>
                     <li><a href="notlar.html" class="menu-item"><i class="fas fa-book"></i> Notlar</a></li>
-                    <li><a href="../index.html#ruh-hali-takibi" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
-                    <li><a href="../index.html#meditasyon" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
+                    <li><a href="ruh-hali.html" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
+                    <li><a href="meditasyon.html" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
                     <li><a href="../index.html#mini-egzersizler" class="menu-item"><i class="fas fa-dumbbell"></i> Egzersiz</a></li>
                 </ul>
             </nav>
@@ -65,7 +65,7 @@
                         <h2>Görevler</h2>
                         <div class="tasks-controls">
                             <input type="text" id="task-input" placeholder="Yeni görev ekle...">
-                            <button id="add-task" class="task-btn"><i class="fas fa-plus"></i></button>
+                            <button id="add-task" class="task-btn" title="Görev ekle"><i class="fas fa-plus"></i></button>
                         </div>
                     </div>
                     
