--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li><a href="/html/hakkimizda.html" class="menu-item external-link"><i class="fas fa-info-circle"></i> Hakkımızda</a></li>
                     <li><a href="/html/pomodoro.html" class="menu-item external-link"><i class="fas fa-clock"></i> Pomodoro</a></li>
                     <li><a href="/html/notlar.html" class="menu-item external-link"><i class="fas fa-book"></i> Notlar</a></li>
-                    <li><a href="/html/ruh-hali.html" class="menu-item"><i class="fas fa-smile"></i> Ruh Hali</a></li>
-                    <li><a href="/html/meditasyon.html" class="menu-item"><i class="fas fa-om"></i> Meditasyon</a></li>
+                    <li><a href="/html/ruh-hali.html" class="menu-item external-link"><i class="fas fa-smile"></i> Ruh Hali</a></li>
+                    <li><a href="/html/meditasyon.html" class="menu-item external-link"><i class="fas fa-om"></i> Meditasyon</a></li>
                     <li><a href="#mini-egzersizler" class="menu-item"><i class="fas fa-dumbbell"></i> Egzersiz</a></li>
                 </ul>
             </nav>
