Enhance meditation page: fix typo in mantra text, add first-load class for animations, and improve CSS styles for responsiveness and transitions

--- a/html/meditasyon.html
+++ b/html/meditasyon.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="box-content">
                             <h3>Mantram</h3>
-                            <p>Her güne küçük bir hatırlatma.</p>
+                            <p>Her güne küçük bir hatirlatma.</p>
                         </div>
                     </div>
                     <div class="meditation-box disabled">
